# axum-test

./: Cargo.toml  deploy.sh
hwcj_static/: index.html
src/: main.rs
