[package]
name = "axum-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"