[package]
name = "axum-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 2      # for speed. can be maximized with 3
debug = false
lto = false        # also for speed. change it to true later.